Bug 161585 - Error trying to register inprocserv.dll using regsvr32
Summary: Error trying to register inprocserv.dll using regsvr32
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-15 10:15 UTC by Mike Kaganski
Modified: 2024-06-17 12:15 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2024-06-15 10:15:22 UTC
This Windows command line, run with elevated privileges:

  regsvr32 "C:\Program Files\LibreOffice\program\inprocserv.dll"

giver an error:

---------------------------
RegSvr32
---------------------------
The module "C:\Program Files\LibreOffice\program\inprocserv.dll" was loaded but the call to DllRegisterServer failed with error code 0x80004005.

For more information about this problem, search online using the error code as a search term.
---------------------------
OK   
---------------------------

It is expected to succeed.
Comment 1 Mike Kaganski 2024-06-15 10:18:27 UTC
https://gerrit.libreoffice.org/c/core/+/168903
Comment 2 Commit Notification 2024-06-15 13:32:00 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7b2c82ff14094aad4cb64a9d2531fd8fe48229b1

tdf#161585: fix DllRegisterServer implementation

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-06-17 12:15:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/1e27983ce1c1433c6bdc1be9550a307a5bf357a5

tdf#161585: fix DllRegisterServer implementation

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.