tdf#161585: fix DllRegisterServer implementation

The buffer was prepared with a wrong length (one too few spaces); thus,
the resulting registry key path was wrong, and opening it failed.

While at it, use a normal WinAPI to stringify GUIDs, and simplify code.

Change-Id: I9a51a5aa70791106055c615fd15a32e5e07847a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168903
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 7b2c82ff14094aad4cb64a9d2531fd8fe48229b1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168938
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>